# minimal-vr

./: .gitignore  .gitmodules  CMakeLists.txt
src/: app.cpp  main.cpp
